(#74) add visibility of active interceptors onto UI, also hide empty parts

--- a/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/stubconfig.html
+++ b/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/stubconfig.html
@@ -79,7 +79,7 @@
         <div class="tab-pane" id="conditionCheckers">
           <div class="config-set">
             <fieldset class="form-horizontal">
-              <legend>External condition checkers classes</legend>
+              <legend>External condition checker classes</legend>
               <div class="control-group">
                 <span class="help-block">Click on a file to download its content.</span>
               </div>
@@ -98,7 +98,7 @@
         <div class="tab-pane" id="templateFormatters">
           <div class="config-set">
             <fieldset class="form-horizontal">
-              <legend>External template formatters classes</legend>
+              <legend>External template formatter classes</legend>
               <div class="control-group">
                 <span class="help-block">Click on a file to download its content.</span>
               </div>
@@ -146,7 +146,7 @@
             </fieldset>
           </div>
           <fieldset>
-            <legend>Upload a jar</legend>
+            <legend>Upload a Jar</legend>
             <span class="btn btn-success fileinput-button"> <i class="icon-upload icon-white"></i> <span>Select jar</span> <input
               name="stub-jar" type="file" data-url="../config/admin/stub/multiPartConfigFileUpload" />
             </span>
