further enhancement of postman coll., and UI fix (allows to use http and https too)

--- a/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/messages.html
+++ b/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/messages.html
@@ -85,7 +85,7 @@
       </div>
     </div>
   </div>
-  <script src="http://code.jquery.com/jquery.js"></script>
+  <script src="//code.jquery.com/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/messages.js"></script>
 </body>
