--- a/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/stubconfig.html
+++ b/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/stubconfig.html
@@ -181,7 +181,7 @@
       </div>
     </div>
   </div>
-  <script src="http://code.jquery.com/jquery.js"></script>
+  <script src="//code.jquery.com/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/jquery-fileupload/jquery.ui.widget.js"></script>
   <script src="js/jquery-fileupload/jquery.fileupload.js"></script>
