--- a/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/logs.html
+++ b/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/logs.html
@@ -53,7 +53,7 @@
       </div>
     </div>
   </div>
-  <script src="http://code.jquery.com/jquery.js"></script>
+  <script src="//code.jquery.com/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/logs.js"></script>
 </body>
