--- a/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/readme.html
+++ b/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/readme.html
@@ -40,7 +40,7 @@
       </div>
     </div>
   </div>
-  <script src="http://code.jquery.com/jquery.js"></script>
+  <script src="//code.jquery.com/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/readme.js"></script>
 </body>
