--- a/endusers/index.html
+++ b/endusers/index.html
@@ -39,7 +39,8 @@
                     <li><b>Create your own release</b> from the source</li>
                 </ul>
 
-                After you selected the approach of getting the release, please see <b>configuration and setup instructions <a href="how_to_start.html">here</a></b>.
+                After you selected the approach of getting the release,
+                please see <b>configuration and setup instructions <a href="configuration_and_setup.html">here</a></b>.
 
                 <h2>Using the latest release from Docker Hub</h2>
                 <p>Wilma and Wilma Message Search applications are published via Docker Hub, therefore you may use prepared docker images instantly.</p>
@@ -72,8 +73,8 @@
                     <li>wilma.conf.properties - property file with default settings</li>
                 </ul>
 
-                <p><b>JRE</b> 7 or 8 is required for running <b>Wilma</b> application.</p>
-                <p><b>JDK</b> 7 or 8 is required for running <b>Wilma Message Search</b> application.</p>
+                <p><b>JRE</b> 8 is required for running <b>Wilma</b> application.</p>
+                <p><b>JDK</b> 8 is required for running <b>Wilma Message Search</b> application.</p>
                 <p>Download the necessary running environment here:<a
                         href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">http://www.oracle.com/technetwork/java/javase/downloads/index.html</a>
                 </p>
@@ -117,7 +118,7 @@
     <div class="clearer"></div>
 </div>
 <div class="footer">
-    &copy;2017, EPAM Systems.
+    &copy;2018, EPAM Systems.
 </div>
 
 
