major refactor - NON-BACKWARD COMPATIBLE CHANGE - templateFormatter-> responseFormatter

--- a/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/stubconfig.html
+++ b/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/stubconfig.html
@@ -36,7 +36,7 @@
         <li class="active"><a href="#stubconfig">Stub configuration file</a></li>
           <li><a href="#interceptors">Interceptors</a></li>
           <li><a href="#conditionCheckers">Condition checker</a></li>
-          <li><a href="#templateFormatters">Template formatter</a></li>
+          <li><a href="#responseFormatters">Template formatter</a></li>
           <li><a href="#templates">Template</a></li>
           <li><a href="#sequenceHandlers">Sequence handler</a></li>
           <li><a href="#jar">Jar</a></li>
@@ -95,7 +95,7 @@
             </span>
           </fieldset>
         </div>
-        <div class="tab-pane" id="templateFormatters">
+        <div class="tab-pane" id="responseFormatters">
           <div class="config-set">
             <fieldset class="form-horizontal">
               <legend>External template formatter classes</legend>
