further elimination of xml config usage

--- a/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/admin.html
+++ b/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/admin.html
@@ -33,10 +33,10 @@
         <fieldset class="form-horizontal">
           <legend>Message Logging</legend>
           <div class="control-group">
-            <span class="help-block">By turning message logging on, every HTTP request and response that goes through Wilma is logged.</span>
+            <span class="help-block">By turning message logging on, every HTTP(S) request and response that goes through Wilma is logged.</span>
           </div>
           <div class="control-group">
-            <label class="control-label" for="btn-group-onoff-msglog">Turn on/off</label>
+            <label class="control-label" for="btn-group-onoff-msglog">Message logging:</label>
             <div class="controls">
               <div class="btn-group" id="btn-group-onoff-msglog" data-toggle="buttons-radio">
                 <button class="btn btn-msg" id="btn-msglog-on">On</button>
