fix contact info

--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,7 @@
                     </p>
                     <p>
                         See <b>the list of active tickets</b> at <a href="https://github.com/epam/Wilma/issues">GitHub</a>,<br/>
-                        and participate in <a href="https://groups.google.com/forum/#!forum/wilma-users"><b>Wilma-users public mail list</b></a>
-                        or in <a href="https://join.skype.com/htXS981CNx5Q"><b>Skype chat group</b></a>.
+                        and join to <a href="https://groups.google.com/forum/#!forum/wilma-users"><b>Wilma-users public mail list</b></a>.
                     </p>
 
                 </div>
@@ -90,7 +89,7 @@
     <div class="clearer"></div>
 </div>
 <div class="footer">
-    &copy;2018, EPAM Systems.
+    &copy;2019, EPAM Systems.
 </div>
 
 
