--- a/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/admin.html
+++ b/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/admin.html
@@ -10,26 +10,25 @@
 <link id="favicon" rel="shortcut icon" type="image/png" href="img/icon-wilma.png" />
 </head>
 <body>
-
-  <div class="container">
-  <div class="navbar ">
-    <div class="navbar-inner">
-      <div class="container">
-        <a class="brand">Wilma</a>
-        <ul class="nav">
-          <li id="nav-home"><a href="/index">Home</a></li>
-          <li id="nav-stub"><a href="/stubconfig">Stub Configuration</a></li>
-          <li id="nav-msg-log"><a href="/messages">Message Logs</a></li>
-          <li id="nav-wilma-log"><a href="/logs">Wilma Application Log</a></li>
-          <li id="nav-guide"><a href="/readme">Wilma User's Guide</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-    <h1>Wilma home page</h1>
-    <span id="span-version" class="badge badge-info"></span>
-    <div class="settings">
-      <div class="config-set">
+    <div class="container">
+        <div class="navbar ">
+            <div class="navbar-inner">
+                <div class="container">
+                    <a class="brand">Wilma</a>
+                    <ul class="nav">
+                        <li id="nav-home"><a href="/index">Home</a></li>
+                        <li id="nav-stub"><a href="/stubconfig">Stub Configuration</a></li>
+                        <li id="nav-msg-log"><a href="/messages">Message Logs</a></li>
+                        <li id="nav-wilma-log"><a href="/logs">Wilma Application Log</a></li>
+                        <li id="nav-guide"><a href="/readme">Wilma User's Guide</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <h1>Wilma home page</h1>
+        <span id="span-version" class="badge badge-info"></span>
+        <div class="settings">
+        <div class="config-set">
         <fieldset class="form-horizontal">
           <legend>Message Logging</legend>
           <div class="control-group">
@@ -45,8 +44,35 @@
             </div>
           </div>
         </fieldset>
-      </div>
-      <div class="config-set">
+        </div>
+        <div class="config-set">
+            <fieldset class="form-horizontal">
+                <legend>Message Log File Maintenance Settings</legend>
+                <div class="control-group">
+            <span class="help-block">These properties cannot be edited at runtime. Edit 'wilma.conf.properties' and restart Wilma to modify
+              these!</span>
+                </div>
+                <div class="control-group">
+                    <label class="control-label" for="span-maintainer-method">Maintainer method:</label>
+                    <div class="controls">
+                        <span class="input-xlarge uneditable-input" id="span-maintainer-method"></span>
+                    </div>
+                </div>
+                <div class="control-group">
+                    <label class="control-label" for="span-cron-expression">Maintainer scheduling:</label>
+                    <div class="controls">
+                        <span class="input-xlarge uneditable-input" id="span-cron-expression"></span>
+                    </div>
+                </div>
+                <div class="control-group">
+                    <label class="control-label" id="label-method-property" for="span-method-property">Maintainer property:</label>
+                    <div class="controls">
+                        <span class="input-xlarge uneditable-input" id="span-method-property"></span>
+                    </div>
+                </div>
+            </fieldset>
+        </div>
+        <div class="config-set">
         <fieldset class="form-horizontal">
           <legend>Operation Mode</legend>
           <div class="control-group">
@@ -91,11 +117,11 @@
 
           </div>
         </fieldset>
-      </div>
+        </div>
     </div>
-  </div>
-  <script src="//code.jquery.com/jquery.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/admin.js"></script>
+</div>
+    <script src="//code.jquery.com/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/admin.js"></script>
 </body>
 </html>
