--- a/contact.html
+++ b/contact.html
@@ -49,15 +49,11 @@
                     </p>
                     <p>
                         <b>Feel free to send us your issues and solutions, your suggestions for new features to this <a href="mailto:tamas_kohegyi@epam.com?Subject=[Wilma]" target="_top">e-mail address</a></b>.
+                        See <b>the list of active tickets</b> at <a href="https://github.com/epam/Wilma/issues">GitHub</a>.
                     </p>
                     <p>
                         Should you have <b>enterprise support request</b>, don't hesitate to contact to the mail address above.
                     </p>
-                    <p>
-                        See <b>the list of active tickets</b> at <a href="https://github.com/epam/Wilma/issues">GitHub</a>,<br/>
-                        and join to <a href="https://groups.google.com/forum/#!forum/wilma-users"><b>Wilma-users public mail list</b></a>.
-                    </p>
-
                 </div>
 
 
@@ -89,7 +85,7 @@
     <div class="clearer"></div>
 </div>
 <div class="footer">
-    &copy;2019, EPAM Systems.
+    &copy;2021, EPAM Systems.
 </div>
 
 
