fix list of response formatters - #116

--- a/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/stubconfig.html
+++ b/wilma-application/modules/wilma-webapp/src/main/resources/web-admin/stubconfig.html
@@ -19,11 +19,11 @@
         <div class="container">
           <a class="brand">Wilma</a>
           <ul class="nav">
-            <li id="nav-home"><a href="/index">Home</a></li>
-            <li id="nav-stub"><a href="/stubconfig">Stub Configuration</a></li>
-            <li id="nav-msg-log"><a href="/messages">Message Logs</a></li>
-            <li id="nav-wilma-log"><a href="/logs">Wilma Application Log</a></li>
-            <li id="nav-guide"><a href="/readme">Wilma User's Guide</a></li>
+            <li id="nav-home"><a href="/index" onclick="hideAlert();">Home</a></li>
+            <li id="nav-stub"><a href="/stubconfig" onclick="hideAlert();">Stub Configuration</a></li>
+            <li id="nav-msg-log"><a href="/messages" onclick="hideAlert();">Message Logs</a></li>
+            <li id="nav-wilma-log"><a href="/logs" onclick="hideAlert();">Wilma Application Log</a></li>
+            <li id="nav-guide"><a href="/readme" onclick="hideAlert();">Wilma User's Guide</a></li>
           </ul>
         </div>
       </div>
@@ -34,12 +34,12 @@
       <h3>Update configuration</h3><br/><br/>
       <ul class="nav nav-tabs" id="configuration-uploader-tabs">
         <li class="active"><a href="#stubconfig">Stub configuration groups</a></li>
-          <li><a href="#interceptors">Interceptors</a></li>
-          <li><a href="#conditionCheckers">Condition checkers</a></li>
-          <li><a href="#responseFormatters">Response formatters</a></li>
-          <li><a href="#templates">Templates</a></li>
-          <li><a href="#sequenceHandlers">Sequence handlers</a></li>
-          <li><a href="#jar">Jars</a></li>
+          <li><a href="#interceptors" onclick="hideAlert();">Interceptors</a></li>
+          <li><a href="#conditionCheckers" onclick="hideAlert();">Condition checkers</a></li>
+          <li><a href="#responseFormatters" onclick="hideAlert();">Response formatters</a></li>
+          <li><a href="#templates" onclick="hideAlert();">Templates</a></li>
+          <li><a href="#sequenceHandlers" onclick="hideAlert();">Sequence handlers</a></li>
+          <li><a href="#jar" onclick="hideAlert();">Jars</a></li>
       </ul>
       <div class="tab-content">
         <div class="tab-pane active" id="stubconfig">
